<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_LaudaCommParameters" Id="{ce32abed-b568-4b30-8819-f7bdedede238}">
    <Declaration><![CDATA[TYPE ST_LaudaCommParameters :
STRUCT
	ReadCycle	: TIME := T#500MS;
	Timeout		: TIME := T#45S;
	Ipv4Address	: Tc2_System.T_IPv4Addr;
	Port		: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>